@@ -4,6 +4,8 @@ http://svn.edgewall.org/repos/babel/tags/0.9.2/
 
  * Fixed catalogs' charset values not being recognized (ticket #66).
  * Fixed fuzzy matching when updating message catalogs (ticket #82).
+ * Fixed bug in catalog updating, that in some cases pulled in
+   translations from different catalogs based on the same template.
 
 
 Version 0.9.1
